# EC-OPS

./: .env.example  ARCHITECTURE.md  CLAUDE.md  DESIGN_DECISIONS.md  README.md  pyproject.toml
.claude/agents/: builder.md  checker.md  docs-writer.md  planner.md  reviewer.md  tracker.md
.claude/commands/: loop.md  plan.md  resume.md  speckit-loop.md
.github/workflows/: ci.yml
.specify/: constitution.md  current  preferences.md
.specify/auth/: goal.md  plan.md  spec.md  tasks.md
.specify/bug-fixes-audit/: goal.md  plan.md  spec.md  tasks.md
.specify/guardrail-taxonomy/: .fingerprint  goal.md  plan.md  spec.md  tasks.md
.specify/integration-tests/: goal.md  plan.md  spec.md  tasks.md
.specify/order-processing/: .fingerprint  goal.md  plan.md  spec.md  tasks.md
.specify/patch-status/: goal.md  plan.md  spec.md  tasks.md
.specify/setup-ci-docs/: .fingerprint  goal.md  plan.md  spec.md  tasks.md
docs/: ci-tailscale.md  operations.md
frontend/: app.js  index.html  styles.css
migrations/: env.py
migrations/versions/: 0001_create_orders.py  0002_add_cancelled_status.py  0003_add_users_table.py  0004_add_user_id_to_orders.py
requests/: EC-OPS.insomnia_collection.json  EC-OPS.postman_collection.json  EC-OPS.postman_environment.json  agent.http  auth.http  orders.http  scenarios.http  validation.http
scripts/: db_setup.py  generate_insomnia.py  generate_postman.py  migrate.py  seed_user.py  setup.py
src/: main.py
src/agent/: a2a_router.py  agui_stream.py  events.py  executor.py  guardrails.py  mcp_server.py  tools.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
src/core/: config.py  database.py  dependencies.py  retrieval.py
src/orders/: exceptions.py  models.py  router.py  schemas.py  service.py
src/scheduler/: jobs.py  setup.py
tests/: conftest.py
tests/agent/: conftest.py  test_a2a.py  test_a2ui_events.py  test_agui_stream.py  test_guardrail_wiring.py  test_mcp_server.py
tests/auth/: test_agent_route_auth.py  test_auth_router.py  test_auth_service.py
tests/eval/: eval_cases.py  test_guardrails_eval.py  (+1 more)
(+10 files in other folders)
