[project]
name = "ec-ops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "bcrypt>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "eval: guardrail and pipeline evaluation tests — deselect in CI with SKIP_EVALS=true",
    "slow: requires external services (LM Studio) — never run in CI",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/agent/guardrails.py" = ["E501"]
